--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-form-data": "^2.0.19",
+    "framer-motion": "^10.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "os": "^0.1.2",
